--- a/app/src/main/res/layout/activity_login_form.xml
+++ b/app/src/main/res/layout/activity_login_form.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
+    android:background="#000000"
     android:gravity="center_vertical"
+    android:orientation="vertical"
+    android:padding="30dp"
     tools:context=".LoginForm">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:src="@drawable/login_image"
+        android:background="#000000"
         android:padding="30dp"
-        />
+        android:src="@drawable/login_image" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColorHint="@color/teal_700"
-        >
+        android:textColorHint="@color/teal_700">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
             android:ems="10"
+            android:hint="Email"
             android:inputType="text"
-            android:textSize="20sp"
-            />
-
+            android:textSize="20sp" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,28 +41,26 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:textColorHint="@color/teal_700"
-        app:passwordToggleEnabled="true"
-    >
+        app:passwordToggleEnabled="true">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
             android:ems="10"
+            android:hint="Password"
             android:inputType="textPassword"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="Login"
-        android:textSize="22sp"
-        android:textColor="#FFFFFF"
         android:layout_marginTop="10dp"
         android:background="@drawable/button_rounded"
-        />
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp" />
 
     <Button
         android:layout_width="match_parent"
