--- a/app/src/main/res/layout/activity_signup_form.xml
+++ b/app/src/main/res/layout/activity_signup_form.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="30dp"
-    android:gravity="center_vertical"
     tools:context=".SignUpForm">
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
@@ -23,124 +22,117 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ems="10"
             android:hint="Enter Full name"
-            android:ems="10"
             android:inputType="text"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColorHint="@color/teal_700"
-        >
+        android:textColorHint="@color/teal_700">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ems="10"
             android:hint="Enter User Name"
-            android:ems="10"
             android:inputType="text"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColorHint="@color/teal_700"
-        >
+        android:textColorHint="@color/teal_700">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ems="10"
             android:hint="Enter Email"
-            android:ems="10"
             android:inputType="text"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColorHint="@color/teal_700"
-        >
+        android:textColorHint="@color/teal_700">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ems="10"
             android:hint="Enter Password"
-            android:ems="10"
             android:inputType="text"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColorHint="@color/teal_700"
-        >
+        android:textColorHint="@color/teal_700">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Confirm Password"
             android:ems="10"
+            android:hint="Confirm Password"
             android:inputType="text"
-            android:textSize="20dp"
-            />
+            android:textSize="20dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
 
 
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        >
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gender: "
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Male"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
+
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:text="Female"
-            android:textSize="20sp"
-            />
+            android:textSize="20sp" />
 
     </RadioGroup>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="Register"
-        android:textSize="22sp"
-        android:textColor="#FFFFFF"
         android:layout_marginTop="40dp"
         android:background="@drawable/button_rounded"
+        android:text="Register"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp"
 
         />
 </LinearLayout>
